Fixed spacing on mobile headers.

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -723,7 +723,7 @@ h3 {
   text-align: center;
   background: none;
   color: $brand-color1;
-  padding-top: 0;
+  padding: 0 .5em;
 }
 
 .single .main h1 {
